--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,212 @@
     transform: rotate(360deg);
   }
 }
+
+.marquee{
+   background-color: rgb(219, 218, 218);
+   height: 45px;
+   color:#6610f2 ;
+   display: flex;
+   /* justify-content: center; */
+   align-items: center;
+   font-size: 18px;
+}
+.flex-container{
+   display: flex !important;
+}
+
+/* about us page css start */
+
+    .about-first{
+  width: 100%;
+  height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.about-first h1{
+  margin-top: 45px;
+   font-size: 50px;
+   color:#000;
+   margin-bottom: 25px;
+   position: relative;
+}
+.about-first h1::after{
+   content: " ";
+   position: absolute;
+   width: 100%;
+   height: 4px;
+   display: block;
+   margin: 0 auto;
+   background-color: #397ef6;
+}
+.about-first p {
+   font-size: 18px;
+   color:#666; 
+   margin-bottom: 15px;
+      text-align: center;
+  }
+.aboutcontainer{
+   width: 90%;
+   margin: 0 auto ;
+   padding: 0 20px;
+
+}
+.about{
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   flex-wrap: wrap;   
+}
+.about-image{
+   flex:1; 
+   margin-right: 40px;
+   overflow: hidden;
+}
+.about-image img{
+   max-width: 100%;
+   height: auto; 
+    display: block ;
+    transition: 0.5s ease ;
+}
+.about-image img:hover{
+  transform: scale(1.2);
+}
+.about-content{
+   flex:1; 
+   padding-bottom: 15px;
+}
+.about-content h2{
+   font-size: 25px;
+   line-height: 1.7;
+   color:black;
+}
+.about-content p {
+   line-height: 1.3;
+   font-size: 1.2em;
+   color:#666;
+}
+.about-content .read-more{
+   display: inline-block;
+   padding: 10px 20px;
+   color:#fff;
+   font-size: 19px;
+   text-decoration: none;
+   border-radius:25px ;
+   margin-top: 15px;
+   transition: 0.3s ease ;
+   background-color: blue;
+}
+.about-content .read-more:hover{
+   background-color: #3e8e41 ;
+}
+@media Screen and (max-width : 991px){
+   about-first{
+       padding: 0px 20px;
+   }
+   .about-first h1{
+       font-size: 36px;
+
+   }
+   .about-first p {
+       font-size: 17px;
+       margin-bottom: 0px;
+   }
+   .aboutcontainer{
+       padding:0px;
+   }
+   .about{
+       padding: 20px;
+       flex-direction: column;
+   }
+   .about-image{
+       margin-right: 0px;
+       margin-bottom: 20px;
+
+   }
+   .about-content p {
+      padding: 0px;
+      font-size: 16px;
+   }
+   .about-content .read-more{
+       font-size: 16px;
+   }
+}
+
+/* about us page end section */
+    
+/* footer section start  */
+.footer-container{
+	max-width: 1170px;
+	margin:auto;
+}
+.footer-row{
+	display: flex;
+	flex-wrap: wrap;
+}
+ul{
+	list-style: none;
+}
+.footer{
+	background-color: #24262b;
+    padding: 70px 0;
+}
+.footer-col{
+   width: 25%;
+   padding: 0 15px;
+}
+.footer-col h4{
+	font-size: 18px;
+	color: #ffffff;
+	text-transform: capitalize;
+	margin-bottom: 35px;
+	font-weight: 500;
+	position: relative;
+}
+.footer-col h4::before{
+	content: '';
+	position: absolute;
+	left:15;
+	bottom: -10px;
+	background-color: #e91e63;
+	height: 2px;
+	box-sizing: border-box;
+	width: 50px;
+}
+.footer-col ul li:not(:last-child){
+	margin-bottom: 10px;
+}
+.footer-col ul li a{
+	font-size: 16px;
+	text-transform: capitalize;
+	color: #ffffff;
+	text-decoration: none;
+	font-weight: 300;
+	color: #bbbbbb;
+	display: block;
+	transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+	color: #ffffff;
+	padding-left: 8px;
+}
+.footer-col .social-links a{
+	display: inline-block;
+	height: 40px;
+	width: 40px;
+	background-color: rgba(255,255,255,0.2);
+	margin:0 10px 10px 0;
+	text-align: center;
+	line-height: 40px;
+	border-radius: 50%;
+	color: #ffffff;
+	transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover{
+	color: #24262b;
+	background-color: #ffffff;
+}
+
+/* footer-end */
+/* footer section end  */
